# mcp-knowledge-graph

./: .gitignore  CHANGELOG.md  README.md  WORKFLOW.md  index.js  index.js.map  index.ts  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.claude/: settings.local.json
docs/: fastmcp_2.11_docs.md  fastmcp_2.11_full_docs.md
docs/briefs/: entity-versioning-update-operations.md  multiple-memory-contexts.md
docs/development/: placeholder.md
docs/plans/: planned-features.md
mcp_server_memory_temporal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mcp_knowledge_graph/: __init__.py  __main__.py  manager.py  models.py  server.py
